tests/ui/public_caps_mask_reintroduction.stderr
error[E0425]: cannot find type `CapsMask` in module `hibana::integration::cap`
 --> tests/ui/public_caps_mask_reintroduction.rs:2:60
  |
2 |     let _ = core::mem::size_of::<hibana::integration::cap::CapsMask>();
  |                                                            ^^^^^^^^ not found in `hibana::integration::cap`
