tests/ui/public_caps_mask_reintroduction.rs
fn main() {
    let _ = core::mem::size_of::<hibana::integration::cap::CapsMask>();
}
